# bookmark-service/internal/api/api.go
@@ -12,6 +12,7 @@ import (
 	userRepo "github.com/HemlockPham7/golang-system-design/internal/repository/user"
 	"github.com/HemlockPham7/golang-system-design/internal/service"
 	userSvc "github.com/HemlockPham7/golang-system-design/internal/service/user"
+	"github.com/HemlockPham7/golang-system-design/pkg/jwtutils"
 	"github.com/HemlockPham7/golang-system-design/pkg/utils"
 	"github.com/gin-gonic/gin"
 	"github.com/redis/go-redis/v9"
@@ -33,15 +34,28 @@ type engine struct {
 	cfg         *Config
 	redisClient *redis.Client
 	dbClient    *gorm.DB
+	jwtGen      jwtutils.JWTGenerator
+	jwtVal      jwtutils.JWTValidator
+}
+
+type EngineOpts struct {
+	App         *gin.Engine
+	Cfg         *Config
+	RedisClient *redis.Client
+	DbClient    *gorm.DB
+	JwtGen      jwtutils.JWTGenerator
+	JwtVal      jwtutils.JWTValidator
 }
 
 // NewEngine creates a new engine
-func NewEngine(cfg *Config, redisClient *redis.Client, dbClient *gorm.DB) Engine {
+func NewEngine(opts *EngineOpts) Engine {
 	app := &engine{
-		app:         gin.Default(),
-		cfg:         cfg,
-		redisClient: redisClient,
-		dbClient:    dbClient,
+		app:         opts.App,
+		cfg:         opts.Cfg,
+		redisClient: opts.RedisClient,
+		dbClient:    opts.DbClient,
+		jwtGen:      opts.JwtGen,
+		jwtVal:      opts.JwtVal,
 	}
 	app.initRoutes()
 	return app
@@ -78,7 +92,7 @@ func (e *engine) initHandlers() *handlers {
 
 	userRepository := userRepo.NewSqlRepository(e.dbClient)
 	hasher := utils.NewHasher()
-	userService := userSvc.NewService(userRepository, hasher)
+	userService := userSvc.NewService(userRepository, hasher, e.jwtGen)
 	userHandler := userHdl.NewHandler(userService)
 
 	return &handlers{
@@ -106,9 +120,16 @@ func (e *engine) initRoutes() {
 	// Init v1 routes
 	v1Routes := e.app.Group("/v1")
 	{
-		v1Routes.POST("/links/shorten", allHandlers.urlHandler.ShortenLink)
-		v1Routes.GET("/links/redirect/:code", allHandlers.urlHandler.Redirect)
+		linksRoutes := v1Routes.Group("/links")
+		{
+			linksRoutes.POST("/shorten", allHandlers.urlHandler.ShortenLink)
+			linksRoutes.GET("/redirect/:code", allHandlers.urlHandler.Redirect)
+		}
 
-		v1Routes.POST("/users/register", allHandlers.userHandler.Register)
+		usersRoutes := v1Routes.Group("/users")
+		{
+			usersRoutes.POST("/register", allHandlers.userHandler.Register)
+			usersRoutes.POST("/login", allHandlers.userHandler.Login)
+		}
 	}
 }
